--- a/todo
+++ b/todo
@@ -36,6 +36,19 @@
     [x] loop [ this is loop-while or just loop ]
         [x] loop-while
 
+[ ] fix and finish chatgpt implementation
+    [ ] requires more net testing, get all functions working
+    [ ] implement a designed token to sign-off on file generated
+        or, we rely on deletion of cache-source from server media response
+        - tokenless is good, because its reduced in nature. 
+        - our boolean is the resource, and not having it will always regenerate
+        - we also are 'over-generating' less with this system.. the user would have to forcibly delete each run
+
+[ ] progress testing coverage to entire test.ag module
+    [ ] uncomment entire file
+    [ ] implement the import logic to require no other statements other than import prior
+    [ ] retest ifdef
+
 [x] Au model/member reduction into Au_t (after: reduction, ha!)
     [x] register types modules, with default being an exported symbol au, in struct _Au_t
     *** everything is mappable -- with default being a linked-list
